[project]
name = "hospital-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.27",
    "langchain-openai>=1.1.12",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
chat = "main:run_chat"
build-index = "scripts.build_index:build_index"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hospital_rag", "scripts"]
